infrastructure/templates/server/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: students-server
  labels:
    app: students-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: students-server
  template:
    metadata:
      labels:
        app: students-server
        admission.datadoghq.com/enabled: "true"
      annotations:
        prometheus.io/port: "5000"
        prometheus.io/path: "/api/metrics"
        prometheus.io/scrape: "true"
        admission.datadoghq.com/nodejs-lib.version: v3.11.0
    spec:
      containers:
        - name: students-server
          image: ramikammoun2023/server
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
