infrastructure/templates/server/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: students-server
  labels:
    name: students-server
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: students-server-service
              port: 
                number: 5000
